--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Django==1.8.16
-django-geojson==2.9.1
-django-leaflet==0.19.0
-psycopg2==2.6.2
-
+Django==2.1.5
+django-geojson==2.12.0
+django-leaflet==0.24.0
+psycopg2==2.7.6.1
+psycopg2-binary==2.7.6.1
+pytz==2018.7
+six==1.12.0
