--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,5 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+#VS code editor
+.vscode/
