--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,25 @@
+astroid==2.1.0
+bleach==3.0.2
+dj-database-url==0.5.0
+dj-static==0.0.6
 Django==2.1.5
 django-geojson==2.12.0
 django-leaflet==0.24.0
+gunicorn==19.9.0
+isort==4.3.4
+lazy-object-proxy==1.3.1
+Markdown==3.0.1
+mccabe==0.6.1
+Pillow==5.4.1
 psycopg2==2.7.6.1
 psycopg2-binary==2.7.6.1
+pylint==2.2.2
+python-decouple==3.1
 pytz==2018.7
 six==1.12.0
+static3==0.7.0
+typed-ast==1.1.1
+Unipath==1.1
+webencodings==0.5.1
+whitenoise==4.1.2
+wrapt==1.10.11
