--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,9 @@ isort==4.3.4
 lazy-object-proxy==1.3.1
 Markdown==3.0.1
 mccabe==0.6.1
-Pillow==6.2.0
-psycopg2==2.7.6.1
-psycopg2-binary==2.7.6.1
+Pillow>=6.2.2
+psycopg2>=2.8.4
+psycopg2-binary==2.8.4 
 pylint==2.2.2
 python-decouple==3.1
 pytz==2018.7
