--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,31 @@
-astroid==2.1.0
-bleach>=3.1.4
+asgiref==3.4.1
+astroid==2.8.0
+bleach==4.1.0
 dj-database-url==0.5.0
 dj-static==0.0.6
-Django
-django-geojson==2.12.0
-django-leaflet==0.24.0
-gunicorn==19.9.0
-isort==4.3.4
-lazy-object-proxy==1.3.1
-Markdown==3.0.1
+Django==3.2.7
+django-geojson==3.2.0
+django-leaflet==0.28.1
+gunicorn==20.1.0
+isort==5.9.3
+lazy-object-proxy==1.6.0
+Markdown==3.3.4
 mccabe==0.6.1
-Pillow>=6.2.2
-psycopg2>=2.8.4
-psycopg2-binary==2.8.4 
-pylint==2.2.2
-python-decouple==3.1
-pytz==2018.7
-six==1.12.0
+packaging==21.0
+Pillow==8.3.2
+pip-review==1.1.0
+platformdirs==2.4.0
+psycopg2-binary==2.9.1
+pylint==2.11.1
+pyparsing==2.4.7
+python-decouple==3.4
+pytz==2021.1
+six==1.16.0
+sqlparse==0.4.2
 static3==0.7.0
-typed-ast==1.1.1
+toml==0.10.2
+typing-extensions==3.10.0.2
 Unipath==1.1
 webencodings==0.5.1
-whitenoise==4.1.2
-wrapt==1.10.11
+whitenoise==5.3.0
+wrapt==1.12.1
