--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ lazy-object-proxy==1.6.0
 Markdown==3.3.4
 mccabe==0.6.1
 packaging==21.0
-Pillow==8.3.2
+Pillow>=9.0.0
 pip-review==1.1.0
 platformdirs==2.4.0
 psycopg2-binary==2.9.1
