Updated requirements and dependencies.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,9 @@
-asgiref==3.4.1
-astroid==2.8.0
-bleach==4.1.0
-dj-database-url==0.5.0
-dj-static==0.0.6
-Django==3.2.13
-django-geojson==3.2.0
-django-leaflet==0.28.1
-gunicorn==20.1.0
-isort==5.9.3
-lazy-object-proxy==1.6.0
-Markdown==3.3.4
-mccabe==0.6.1
-packaging==21.0
-Pillow==9.2.0
-pip-review==1.1.0
-platformdirs==2.4.0
-psycopg2-binary==2.9.1
-pylint==2.11.1
-pyparsing==2.4.7
-python-decouple==3.4
-pytz==2021.1
-six==1.16.0
+asgiref==3.5.2
+backports.zoneinfo==0.2.1
+Django==4.0.6
+django-geojson==3.2.1
+django-leaflet==0.28.3
+psycopg-binary==3.0.15
+psycopg2==2.9.3
 sqlparse==0.4.2
-static3==0.7.0
-toml==0.10.2
-typing-extensions==3.10.0.2
-Unipath==1.1
-webencodings==0.5.1
 whitenoise==6.2.0
-wrapt==1.12.1
