--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
+dj-database-url==0.5.0
 Django==4.0.6
 django-geojson==3.2.1
 django-leaflet==0.28.3
+gunicorn==20.1.0
 psycopg-binary==3.0.15
 psycopg2==2.9.3
 sqlparse==0.4.2
