Refactored release configuration for heroku.

--- a/heroku.yml
+++ b/heroku.yml
@@ -7,8 +7,7 @@ build:
     web: Dockerfile
 release:
   command:
-    - python manage.py collectstatic --noinput
-    -
+    - python manage.py migrate
   image: web
 run:
   web: gunicorn mywebsite.wsgi
