--- a/heroku.yml
+++ b/heroku.yml
@@ -7,7 +7,7 @@ build:
     web: Dockerfile
 release:
   command:
-    - python manage.py migrate
+    - python manage.py collectstatic --noinput
   image: web
 run:
   web: gunicorn mywebgis.wsgi
