Added static files management configuration.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
+boto3==1.24.23
+botocore==1.27.23
 dj-database-url==0.5.0
 Django==4.0.6
 django-geojson==3.2.1
 django-leaflet==0.28.3
+django-storages==1.12.3
 gunicorn==20.1.0
+jmespath==1.0.1
 psycopg-binary==3.0.15
 psycopg2==2.9.3
+python-dateutil==2.8.2
+s3transfer==0.6.0
+six==1.16.0
 sqlparse==0.4.2
+urllib3==1.26.9
 whitenoise==6.2.0
