--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,29 @@
 asgiref==3.6.0
-boto3==1.26.41
-botocore==1.29.41
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+cryptography==40.0.1
+defusedxml==0.7.1
 dj-database-url==1.2.0
+dj-rest-auth==3.0.0
 Django==4.1.7
-django-geojson==4.0.0
+django-allauth==0.53.1
+django-cors-headers==3.14.0
+django-environ==0.10.0
+django-filter==23.1
 django-leaflet==0.28.3
-django-storages==1.13.2
-gunicorn==20.1.0
-jmespath==1.0.1
-psycopg-binary==3.1.6
-psycopg2==2.9.5
-python-dateutil==2.8.2
-s3transfer==0.6.0
-six==1.16.0
+djangorestframework==3.14.0
+djangorestframework-gis==1.0
+djangorestframework-simplejwt==5.2.2
+idna==3.4
+oauthlib==3.2.2
+psycopg2-binary==2.9.5
+pycparser==2.21
+PyJWT==2.6.0
+python3-openid==3.2.0
+pytz==2023.2
+requests==2.28.2
+requests-oauthlib==1.3.1
 sqlparse==0.4.3
-urllib3==1.26.13
+urllib3==1.26.15
 whitenoise==6.2.0
