--- a/Pipfile
+++ b/Pipfile
@@ -4,23 +4,26 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "~=4.1.9"
+django = "~=4.2.2"
 djangorestframework = "~=3.14.0"
 djangorestframework-gis = "~=1.0"
-psycopg2-binary = "~=2.9.5"
 django-environ = "~=0.10.0"
-django-cors-headers = "~=3.14.0"
-whitenoise = "~=6.2.0"
-django-filter = "~=23.1"
-dj-rest-auth = "~=3.0.0"
-django-allauth = "~=0.53.1"
-django-leaflet = "~=0.28.3"
+django-cors-headers = "~=4.1.0"
+whitenoise = "~=6.5.0"
+django-filter = "~=23.2"
+dj-rest-auth = "~=4.0.1"
+django-allauth = "~=0.54.0"
+django-leaflet = "~=0.29.0"
 djangorestframework-simplejwt = "~=5.2.2"
-dj-database-url = "~=1.2.0"
+dj-database-url = "~=2.0.0"
+psycopg = "~=3.1.9"
+psycopg-binary = "~=3.1.9"
 
 [dev-packages]
-black = "~=23.1.0"
-django-debug-toolbar = "~=3.8.1"
+black = "~=23.3.0"
+django-debug-toolbar = "~=4.1.0"
+faker = "~=18.11.1"
+coverage = "~=7.2.7"
 
 [requires]
 python_version = "3.10"
