--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,8 @@ djangorestframework-simplejwt = "~=5.2.2"
 dj-database-url = "~=2.0.0"
 psycopg = "~=3.1.9"
 psycopg-binary = "~=3.1.9"
+django-geojson = "~=4.0.0"
+django-storages = "~=1.13.2"
 
 [dev-packages]
 black = "~=23.3.0"
