--- a/Pipfile
+++ b/Pipfile
@@ -5,16 +5,10 @@ name = "pypi"
 
 [packages]
 django = "~=4.2.2"
-djangorestframework = "~=3.14.0"
-djangorestframework-gis = "~=1.0"
 django-environ = "~=0.10.0"
 django-cors-headers = "~=4.1.0"
 whitenoise = "~=6.5.0"
-django-filter = "~=23.2"
-dj-rest-auth = "~=4.0.1"
-django-allauth = "~=0.54.0"
 django-leaflet = "~=0.29.0"
-djangorestframework-simplejwt = "~=5.2.2"
 dj-database-url = "~=2.0.0"
 psycopg = "~=3.1.9"
 psycopg-binary = "~=3.1.9"
@@ -22,6 +16,7 @@ django-geojson = "~=4.0.0"
 django-storages = "~=1.13.2"
 boto3 = "~=1.26.160"
 django-cloudinary-storage = "~=0.3.0"
+gunicorn = "~=20.1.0"
 
 [dev-packages]
 black = "~=23.3.0"
