--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 django = "~=4.2.3"
 django-environ = "~=0.10.0"
-django-cors-headers = "~=4.1.0"
+django-cors-headers = "~=4.2.0"
 whitenoise = "~=6.5.0"
 django-leaflet = "~=0.29.0"
 dj-database-url = "~=2.0.0"
@@ -14,14 +14,16 @@ psycopg = "~=3.1.9"
 psycopg-binary = "~=3.1.9"
 django-geojson = "~=4.0.0"
 django-storages = "~=1.13.2"
-boto3 = "~=1.26.160"
+boto3 = "~=1.28.2"
 django-cloudinary-storage = "~=0.3.0"
 gunicorn = "~=20.1.0"
+djangorestframework-gis = "~=1.0"
+djangorestframework = "~=3.14.0"
 
 [dev-packages]
-black = "~=23.3.0"
+black = "~=23.7.0"
 django-debug-toolbar = "~=4.1.0"
-faker = "~=18.11.1"
+faker = "~=19.1.0"
 coverage = "~=7.2.7"
 
 [requires]
