--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -42,6 +42,18 @@ services:
           condition: service_healthy
     restart: always
 
+  client:
+      build:
+          context: ./busstops-app
+          dockerfile: Dockerfile-dev
+      container_name: client4${COMPOSE_PROJECT_NAME}
+      volumes:
+          -   ./busstops-app:/usr/src/app
+      ports:
+          -   "80:5173"
+      depends_on:
+          -   web
+
 volumes:
     postgres_data_dev:
     static_volume:
