--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
 
   database:
-    image: geonode/postgis:13
+    image: geonode/postgis:15
     container_name: db4${COMPOSE_PROJECT_NAME}
     environment:
         - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
@@ -22,11 +22,11 @@ services:
       - "5432:5432"
     restart: always
 
-  web:
+  backend:
     build:
         context: .
         dockerfile: Dockerfile-dev
-    container_name: web4${COMPOSE_PROJECT_NAME}
+    container_name: backend4${COMPOSE_PROJECT_NAME}
     command: python /home/geouser/nairobi_busstops/manage.py runserver 0.0.0.0:8000
     volumes:
         - static_volume:/home/geouser/nairobi_busstops/staticfiles
@@ -52,7 +52,7 @@ services:
       ports:
           -   "80:5173"
       depends_on:
-          -   web
+          -   backend
 
 volumes:
     postgres_data_dev:
